really fixed images being squashed

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -14,9 +14,7 @@ textarea{
 }
 
 .post-image{
-	width: 100%;
 	max-width: 500px;
-	height: 100%;
 	max-height: 500px;
 }
 
